--- a/.gitlocalize.yml
+++ b/.gitlocalize.yml
@@ -1,8 +1,5 @@
-settings:
-  remove_quotes_in_frontmatter:
-   = "true"
 pretranslate:
   paths:
   - source: .
     include:
-      - "checkpoint.ipynb"
+      - "imbalanced_data.ipynb"
